# BigInt

./: CMakeLists.txt  arithmetic.cpp  comparision.cpp  constructors.cpp  main.cpp  pi.cpp
Include/: LongNumber.h
Source/: LongNumber.cpp
